--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <script src="https://api-maps.yandex.ru/2.1/?apikey=0ae8bc53-0497-4d0b-bdd3-99c426c8161b&lang=ru_RU" type="text/javascript"> -->
+    </script>
     <title>React App</title>
   </head>
   <body>
